--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,164 +1,9 @@
-/* Global style */
-:root {
-  --font-family: 'Poppins', sans-serif;
-  --white-color: #fff;
-  --text-color: #111111;
-  --text-color-light: #b1b1b1;
-  --purple-color: #905fff;
-  --border-color: #e4e7ed;
-}
+@import './abstracts/variables.css';
+@import './abstracts/mixins.css';
+@import './base/base.css';
 
-body {
-  font-family: var(--font-family);
-  font-size: 16px;
-  line-height: 1;
-  color: var(--text-color);
-  min-height: 100vh;
-}
+/* Components */
+@import './components/buttons.css';
 
-.wrapper {
-  max-width: 1440px;
-  margin: 0 auto;
-}
-
-.container {
-  max-width: 1195px;
-  padding-left: 30px;
-  padding-right: 30px;
-  margin: 0 auto;
-}
-
-/* Header */
-.header {
-  display: flex;
-  align-items: baseline;
-  justify-content: space-between;
-  padding-top: 28px;
-}
-
-.header__logo {
-  font-size: 20px;
-  font-weight: 600;
-  color: var(--text-color);
-}
-
-.header__auth-link {
-  color: var(--purple-color);
-  font-weight: 500;
-}
-
-.header__auth-link:first-child {
-  margin-right: 26px;
-}
-
-.header__auth-link--signup {
-  padding: 10px;
-  border: 1px solid var(--border-color);
-  border-radius: 4px;
-  transition: all 0.25s linear;
-}
-
-.header__auth-link--signup:hover {
-  background-color: var(--purple-color);
-  border-color: var(--purple-color);
-  color: var(--white-color);
-}
-
-.header__toggle {
-  font-size: 24px;
-  display: none;
-  cursor: pointer;
-}
-
-.header__overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-  z-index: 10;
-}
-
-/* Navbar */
-.nav__list {
-  display: flex;
-}
-
-.nav__item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.nav__link {
-  color: var(--text-color);
-  transition: color 0.25s linear;
-  width: 100%;
-}
-
-.nav__link:hover {
-  color: var(--text-color-light);
-}
-
-.nav__auth {
-  display: none;
-}
-
-/* Responsive header and nav */
-@media screen and (max-width: 1023px) {
-  .nav {
-    display: block;
-    position: fixed;
-    top: 0;
-    right: 0;
-    width: 300px;
-    height: 100vh;
-    background-color: var(--white-color);
-    padding: 50px 20px;
-    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-    transform: translate(100%);
-    transition: transform 0.25s linear;
-    z-index: 20;
-  }
-
-  .nav__list {
-    display: block;
-  }
-
-  .nav__auth {
-    display: block;
-  }
-
-  .header__auth {
-    display: none;
-  }
-
-  .header__logo {
-    font-size: 28px;
-  }
-
-  .header__toggle {
-    display: block;
-  }
-
-  .header .nav__item {
-    margin-right: 0;
-  }
-
-  .nav__link {
-    padding: 20px;
-  }
-
-  .nav__link:hover {
-    background-color: var(--purple-color);
-    border-radius: 4px;
-    color: var(--white-color);
-  }
-
-  .header.active .nav {
-    transform: translate(0);
-  }
-  .header.active .header__overlay {
-    display: block;
-  }
-}
+/* Layout */
+@import './layout/header.css';
