--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,9 +1,9 @@
-@import './abstracts/variables.css';
-@import './abstracts/mixins.css';
-@import './base/base.css';
+@import "./abstracts/variables.css";
+@import "./abstracts/mixins.css";
+@import "./base/base.css";
 
 /* Components */
-@import './components/buttons.css';
+@import "./components/buttons.css";
 
 /* Layout */
-@import './layout/header.css';
+@import "./layout/header.css";
