--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,10 @@
+/* Base */
+@import "../../node_modules/normalize.css";
+@import "./base/base.css";
+
+/* Abstracts */
 @import "./abstracts/variables.css";
 @import "./abstracts/mixins.css";
-@import "./base/base.css";
 
 /* Components */
 @import "./components/buttons.css";
