--- a/src/styles/base/base.css
+++ b/src/styles/base/base.css
@@ -39,3 +39,11 @@ body {
   padding-left: 30px;
   margin: 0 auto;
 }
+
+@media screen and (max-width: 767px) {
+  .container {
+    max-width: 1165px;
+    padding-right: 15px;
+    padding-left: 15px;
+  }
+}
