--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -8,6 +8,8 @@
 
 /* Components */
 @import "./components/buttons.css";
+@import "./components/form.css";
 
 /* Layout */
 @import "./layout/header.css";
+@import "./layout/hero.css";
