--- a/src/styles/components/buttons.css
+++ b/src/styles/components/buttons.css
@@ -24,3 +24,9 @@
   background-color: var(--purple-color);
   border-color: var(--purple-color);
 }
+
+@media screen and (max-width: 767px) {
+  .btn {
+    font-size: 12px;
+  }
+}
