feat: api-section

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,6 +1,7 @@
 /* Base */
 @import "../../node_modules/normalize.css";
 @import "./base/base.css";
+@import "./base/utils.css";
 
 /* Abstracts */
 @import "./abstracts/variables.css";
