--- a/src/styles/layout/api.css
+++ b/src/styles/layout/api.css
@@ -1,5 +1,4 @@
 .api {
-  margin-top: 180px;
   @mixin flex space-between, center;
 }
 
@@ -14,10 +13,6 @@
 
 .api__title {
   @mixin flex flex-start, center;
-}
-
-.api__title {
-  margin-bottom: 40px;
 }
 
 .api__title h4 {
@@ -35,8 +30,8 @@
 }
 
 .api__heading {
-  margin-bottom: 60px;
   max-width: 475px;
+  margin: 60px 0 80px;
 }
 
 .api__btn {
@@ -46,4 +41,56 @@
 
 .api__btn i {
   margin-left: 14px;
+}
+
+@media screen and (max-width: 1119px) {
+  .api {
+    gap: 50px;
+  }
+
+  .api__heading {
+    margin: 40px 0 60px;
+  }
+}
+
+@media screen and (max-width: 991px) {
+  .api__heading {
+    margin: 20px 0 40px;
+    font-size: 35px;
+  }
+
+  .api__title h4 {
+    font-size: 20px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .api {
+    display: block;
+  }
+
+  .api__image img {
+    margin: 0 auto;
+    max-width: 280px;
+  }
+
+  .api__info {
+    margin-top: 30px;
+  }
+
+  .api__icon {
+    margin-right: 15px;
+    width: 50px;
+    height: 50px;
+    border-radius: 20px;
+  }
+
+  .api__icon img {
+    max-width: 40%;
+  }
+
+  .api__heading {
+    margin: 15px 0 30px;
+    font-size: 20px;
+  }
 }
