--- a/src/styles/components/section-description.css
+++ b/src/styles/components/section-description.css
@@ -5,10 +5,13 @@
 }
 
 .section-description p {
-  margin-bottom: 30px;
   color: var(--text-color-light);
   font-size: 20px;
   line-height: 1.4;
+}
+
+.section-description a {
+  margin-top: 30px;
 }
 
 @media screen and (max-width: 991px) {
