--- a/src/styles/components/section-description.css
+++ b/src/styles/components/section-description.css
@@ -26,7 +26,10 @@
   }
 
   .section-description p {
-    margin-bottom: 20px;
     font-size: 14px;
+  }
+
+  .section-description a {
+    margin-top: 20px;
   }
 }
